Fix translate-table margins in Chrome
-1.5em is way too much, apparently Firefox contains the table to its
parent element(s) so only a -0.4em was effective, but not in Chrome
resulting in the boy encroaching upon the tabs.

Why this wasn’t happening before, I don’t know.

--- a/pootle/static/css/editor.css
+++ b/pootle/static/css/editor.css
@@ -226,7 +226,7 @@ table.translate-table
 {
     width: 100%;
     table-layout: fixed;
-    margin-top: -1.5em;
+    margin-top: -0.4em;
 }
 
 table.translate-table td
